pamc/src/tests/sample_code/should_fail/type_check/illegal_callee/nullary_type.ph
type U {
    .U: U,
}

let foo = U(U.U);
